# maschine-mikro-mk3-driver

./: .gitignore  98-maschine.rules  Cargo.toml  LICENSE  README.md  example_config.toml
crates/driver/: Cargo.toml
crates/driver/src/: config.rs  lights.rs  main.rs  screen.rs  self_test.rs  settings.rs
crates/maschine_library/: Cargo.toml
crates/maschine_library/src/: lib.rs  lights.rs  screen.rs
crates/midir_alsa/: Cargo.toml
crates/midir_alsa/src/: lib.rs
crates/midir_jack/: Cargo.toml
src/: controls.rs  font.rs  lights.rs  main.rs  screen.rs
