[package]
name = "driver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
maschine_library.workspace = true
hidapi.workspace = true
num.workspace = true
midly.workspace = true
clap.workspace = true
config.workspace = true
serde.workspace = true

midir = { version = "0.10.2", features = ["default"] }

[features]
jack = ["midir/jack"]